--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,10 +7,10 @@
 
     <TextView
         android:id="@+id/main_text"
+        style="@style/dimen"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_below="@id/title_text"
-        style="@style/dimen"
         android:textAppearance="?android:textAppearanceMedium"
         android:textColor="@android:color/black"
         android:textSize="25sp"
@@ -18,9 +18,9 @@
 
     <TextView
         android:id="@+id/title_text"
+        style="@style/dimen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/dimen"
         android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -28,20 +28,28 @@
 
     <TextView
         android:id="@+id/type"
+        style="@style/dimen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/dimen"
         android:layout_alignParentRight="true"
         android:textAppearance="?android:textAppearanceMedium"
         android:textStyle="bold"
         tools:text="Type" />
 
     <TextView
+        android:id="@+id/author_name"
+        style="@style/dimen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/main_text"
+        tools:text="by Authoer Name" />
+
+    <TextView
         android:id="@+id/date"
+        style="@style/dimen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        style="@style/dimen"
         android:layout_below="@id/main_text"
         tools:text="2018-01-01" />
 
